<resources>

    <string name="lib_name">PassportLib</string>

    <!-- 通用 -->
    <string name="error_phone_empty">手机号不能为空</string>
    <string name="error_phone_format">手机号格式输入有误，请重新输入</string>
    <string name="error_captcha_empty">验证码不能为空</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_password_format">密码格式输入有误，请重新输入</string>
    <string name="error_password_confirm">两次输入的密码不一致</string>
    <string name="error_password_same">新旧密码不能一致，请重新输入</string>
    <string name="error_network">网络异常</string>
    <string name="error_server">服务器开小差了，请稍后再试</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_image_captcha">请输入图形验证码</string>
    <string name="hint_captcha">请输入验证码</string>
    <string name="hint_password">请设置密码，8-16位数字、英文、符号</string>
    <string name="hint_password_confirm">请再次输入设置的密码</string>
    <string name="hint_captcha_counting">%1$ds</string>
    <string name="text_captcha_retrieve">重新获取</string>
    <string name="text_finish">完成</string>
    <string name="tip_captcha_send">验证码已发送</string>

    <!-- 注册界面 -->
    <string name="register_title">用户注册</string>
    <string name="register_do">同意协议并注册</string>
    <string name="register_obtain_captcha">获取验证码</string>
    <string name="register_success_tip">注册成功</string>
    <string name="register_declare_agreement">注册即表示同意用户协议</string>

    <!-- 密码登录界面 -->
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register">新用户注册</string>
    <string name="login_do">登录</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_captcha_entry">使用验证码登录</string>

    <!-- 验证码登录界面 -->
    <string name="login_captcha_title">验证码登录</string>

    <!-- 重置密码 -->
    <string name="reset_password_title">重置密码</string>
    <string name="reset_password_tip">重置密码将同时更改实地集团下平台的密码，如：哈奇APP、家有健康APP等，请注意使用新密码登录</string>
    <string name="reset_passpord_success_tip">重置密码成功</string>

    <!-- 修改密码 -->
    <string name="password_modify_title">修改密码</string>
    <string name="password_modify_hint_origin">请输入原密码</string>
</resources>
