<?xml version="1.0" encoding="utf-8"?>
<cc.seedland.inf.passport.widget.DividerLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PassportDividerLayout"
    android:padding="@dimen/size_common_15">
    <EditText
        android:id="@+id/login_captcha_phone_edt"
        style="@style/PassportEdit"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="@dimen/size_common_10"
        android:inputType="phone"
        android:maxLength="20"
        android:hint="@string/hint_phone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/login_captcha_captcha_edt"
            style="@style/PassportEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_captcha"
            android:drawablePadding="@dimen/size_common_10"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/hint_captcha"/>
        <cc.seedland.inf.passport.widget.CountDownButton
            android:id="@+id/login_captcha_gain_txv"
            style="@style/PerformBorderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/size_common_5"
            android:padding="@dimen/size_common_5"
            android:text="@string/register_obtain_captcha"
            app:countingText="@string/hint_captcha_counting"
            app:countingTextColor="@color/default_gray"
            app:endText="@string/text_captcha_retrieve"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/login_captcha_image_edt"
            style="@style/PassportEdit"
            android:layout_width="0dp"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/login_captcha_image_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/login_captcha_perform_btn"
        style="@style/PerformBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_common_30"
        android:text="@string/register_do"/>
</cc.seedland.inf.passport.widget.DividerLinearLayout>
