<?xml version="1.0" encoding="utf-8"?>
<cc.seedland.inf.passport.widget.DividerLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PassportDividerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_common_15">
    <EditText
        android:id="@+id/password_reset_phone_edt"
        style="@style/PhoneEdit"
        android:layout_width="match_parent" />
    <include layout="@layout/include_image_captcha_edit_default" />
    <include layout="@layout/include_captcha_edit_default" />
    <cc.seedland.inf.passport.widget.PasswordEditText
        android:id="@+id/password_reset_password_edt"
        style="@style/PasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password" />
    <cc.seedland.inf.passport.widget.PasswordEditText
        android:id="@+id/password_reset_confirm_edt"
        style="@style/PasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password_confirm" />
    <Button
        android:id="@+id/password_reset_perform_btn"
        style="@style/PerformBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_common_30"
        android:text="@string/text_finish"/>
    <TextView
        style="@style/PassportLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_common_10"
        android:tag="divider:0"
        android:text="@string/reset_password_tip"/>
</cc.seedland.inf.passport.widget.DividerLinearLayout>