<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/captcha_edt"
        style="@style/HachiCaptchaEdit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/size_common_10"
        android:hint="@string/hint_captcha"/>
    <cc.seedland.inf.passport.widget.CountDownButton
        android:id="@+id/captcha_gain_txv"
        style="@style/HachiPerformBorderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/size_common_10"
        android:padding="@dimen/size_common_5"
        android:text="@string/register_obtain_captcha"
        app:countingText="@string/hint_captcha_counting_hachi"
        app:countingColor="@color/gray_hachi_text"
        app:normalColor="@color/red_hachi"
        app:endText="@string/text_captcha_retrieve"/>
</LinearLayout>