<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_common_15">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/size_common_20"
        android:layout_marginBottom="@dimen/size_common_20"
        android:src="@drawable/ic_seedland"/>
    <EditText
        android:id="@+id/login_password_phone_edt"
        style="@style/PhoneEdit"
        android:layout_width="match_parent"
        android:layout_below="@id/login_logo" />
    <View
        android:id="@+id/login_password_phone_div"
        style="@style/PassportDivider"
        android:layout_width="match_parent"
        android:layout_below="@id/login_password_phone_edt"/>
    <cc.seedland.inf.passport.widget.PasswordEditText
        android:id="@+id/login_password_password_edt"
        style="@style/PasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_phone_div"
        android:hint="@string/login_hint_password" />
    <View
        android:id="@+id/login_password_div"
        style="@style/PassportDivider"
        android:layout_width="match_parent"
        android:layout_below="@id/login_password_password_edt"
        android:layout_marginBottom="@dimen/size_common_10"/>
    <TextView
        android:id="@+id/login_forget_password_txv"
        style="@style/PassportEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_div"
        android:text="@string/login_forget_password"/>
    <TextView
        android:id="@+id/login_register_txv"
        style="@style/PassportEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_div"
        android:layout_alignParentRight="true"
        android:text="@string/login_register"/>
    <Button
        android:id="@+id/login_password_perform_btn"
        style="@style/PerformBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_forget_password_txv"
        android:layout_marginTop="@dimen/size_common_30"
        android:text="@string/login_do"/>
    <TextView
        android:id="@+id/login_password_captcha_txv"
        style="@style/PassportEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_perform_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_common_10"
        android:text="@string/login_captcha_entry"/>
</RelativeLayout>