<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/password_modify_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        app:contentInsetStart="0dp">
        <TextView
            android:id="@+id/password_modify_title_txv"
            style="@style/PassportTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="标题"/>
    </android.support.v7.widget.Toolbar>
    <View
        style="@style/PassportDivider"
        android:layout_width="match_parent" />
    <cc.seedland.inf.passport.widget.DividerLinearLayout
        style="@style/PassportDividerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_common_15">
        <cc.seedland.inf.passport.widget.PasswordEditText
            android:id="@+id/password_modify_origin_edt"
            style="@style/PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/password_modify_hint_origin"
            app:button="@drawable/password_show_selector"/>
        <cc.seedland.inf.passport.widget.PasswordEditText
            android:id="@+id/password_modify_current_edt"
            style="@style/PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/hint_password"
            app:button="@drawable/password_show_selector"/>
        <cc.seedland.inf.passport.widget.PasswordEditText
            android:id="@+id/password_modify_confirm_edt"
            style="@style/PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/hint_password_confirm"
            app:button="@drawable/password_show_selector"/>
        <Button
            android:id="@+id/password_modify_perform_btn"
            style="@style/PerformBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_common_30"
            android:text="@string/register_do"/>
    </cc.seedland.inf.passport.widget.DividerLinearLayout>
</LinearLayout>
